--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,7 +1,7 @@
 engines:
-  duplication:
-  	enabled: true
+  fixme:
+    enabled: true
     config:
-    	languages:
-      - ruby
-      	#mass_threshold: 30
+      strings:
+      - FIXME
+      - CUSTOM
